@@ -1,4 +1,5 @@
 HEAD
+	+ Fall back to readonly data in config backup if there are unsaved changes
 	+ Do not show available community version in Dashboard with QA updates
 	+ Adapted dumpBackupExtraData to new expected return value
 2.0.19
