@@ -1,4 +1,5 @@
 HEAD
+	+ Pass new fallbackToRO option when making a configuration backup
 	+ Added Cloud DNS connection check
 2.0.15
 	+ Fix last report link in Subscription page
