@@ -1,4 +1,5 @@
 HEAD
+	+ Removed configuration backup warning as now it is always done
 	+ Fixed syncRows method from DomainsBackup to not mark the module
 	  as changed
 2.0.12
